# n64conv

./: CMakeLists.txt  README.md
mconv64/: CMakeLists.txt
mconv64/src/: binary_output.cpp  binary_output.hpp  c_output.cpp  c_output.hpp  main.cpp  mesh.cpp  mesh.hpp  util.hpp
samplefiles/: sphere.blend
tconv64/: CMakeLists.txt
tconv64/src/: main.cpp
